--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Prashanth Sams</title>
-        <link rel="stylesheet" href="./public/style.css">
+        <link rel="stylesheet" href="./style.css">
         <script src="https://unpkg.com/@optimizely/optimizely-sdk/dist/optimizely.browser.umd.min.js"></script>
         <script>
             const url = 'https://cdn.optimizely.com/datafiles/5C8axMaqs2w5FtV8VYTRV.json';
