--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
     <body>
         <h1 class='center font'>Hello!</h1>
         <div class='center' id='body'>
-            <p class='paraFont'>A/B testing variants</p>
+            <p class='paraFont'>A/B testing two variants</p>
             </br>
             <button class='buttonFont' id='click-me'>Click Me</button>
             <button class='buttonFont' id='dont-click'>Don't click</button>
